# econometria-aplicada-2026

./: .gitignore  .~lock.APE1.odt#  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  MODELO VAR -VEC.do  README.md  README_AUDITORIA.md  ROADMAP.md  SESSION_REPORT.md  ape1_auditoria_artefactos.py  ape1_auditoria_raw.py  ape1_utils.py  main.py  pyproject.toml  pyrightconfig.json  requirements.txt  sonar-project.properties  variables_no_resueltas.md
.github/workflows/: ci.yml
bibliography/: bibliography_index.json
config/: catalog_ape1.toml  catalog_equipo.toml  intelligence_map.json  pipeline_profiles.toml  resources.json  settings.toml
core/: __init__.py  config.py
data/exports/: APE1_Auditoria_Forense_MASTER.xlsx
data/processed/: APE1_variables_responsable.xlsx  panel_raw.xlsx
data/raw/: auditoria_integridad.csv  auditoria_redundancia.csv  diccionario_variables.csv  manifest_fuentes.csv  manifest_fuentes_raw.csv  matriz_cumplimiento_consigna.csv  panel_raw.csv  propuesta_panel_modelo.csv  series_catalog.pkl
docs/: README.md
docs/bibliography/: PENDIENTES.md  rag_status.json
docs/management/: ARCHITECTURE.md  CHANGELOG.md  ROADMAP.md  SESSION_REPORT.md  backlog.md
docs/syllabus/: LICENSE  README_UV.md
docs/unidad1/: README.md
docs/unidad2/: README.md
docs/unidad3/: README.md
docs/writing/: index.qmd  references.bib
scripts/: csv_to_excel.py  high_fidelity_integration.py  index_bibliography.py  query_bibliography.py  uv_bootstrap.sh  vanguard_audit_v2.py
src/: __init__.py  ape1_utils.py
src/core/: __init__.py  brain.py  config.py  constants.py  exceptions.py  lake.py  pipeline_config.py  source_backends.py  utils.py
src/lib/: __init__.py  bibliography.py  catalog.py  data_doctor.py  engine.py  exporters.py
src/orchestration/: M01-U1-APE-Master_Build.py  __init__.py  ape1_master_build.py  zip_task.py
src/processing/: ape1_auditoria_artefactos.py  ape1_auditoria_raw.py
src/scrapers/: bce_scraper.py  inec_scraper.py  market_data_scraper.py  news_scraper.py  pdot_ingestor.py  worldbank_scraper.py
src/tasks/: T01-U1-APE-Homicidios_Ecuador.py  T02-U1-ACD-Consolidado_Equipo.py  T03-U1-AA-Panel_Ambiental_Latam.py  T04-U1-ACD-SEM_Homicidios.py  T05-Report_Engine.py  Task_Homicidios_Raw_Base.py  sync_bibliographic_intelligence.py
src/tests/: smoke_test_doctor.py
src/tools/: academic_summarizer.py  apply_excel_colors.py  generate_master_excel.py  normalize_group_data.py  pack_delivery.py  wb_search.py
stata/: .gitignore  erick.condoy.do
stata/unidad1/: acd1_homicidios.do  ape1_panel_latam.do
tests/: conftest.py  test_catalog.py  test_engine_profile.py  test_fetch.py  test_http_backend.py  test_lake_contract.py  test_main.py  test_pipeline_config.py  test_source_backends.py  test_system_contract.py  test_vault_architecture.py
tests/governance/: test_data_contracts.py
writing/: _quarto.yml  index.qmd
(+170 files in other folders)
