[project]
name = "ape1_auditoria_forense"
version = "0.1.0"
requires-python = ">=3.12"

dependencies = [
  "pandas>=1.5.0",
  "requests>=2.31.0",
  "openpyxl>=3.1.0",
  "polars>=1.39.3",
  "loguru>=0.7.3",
  "rich>=15.0.0",
  "pypdf2>=3.0.1",
  "googlesearch-python>=1.3.0",
  "httpx>=0.28.1",
  "beautifulsoup4>=4.14.3",
  "statsmodels>=0.14.6",
  "linearmodels>=7.0",
  "pandera>=0.30.1",
  "xlsxwriter>=3.2.9",
  "pyarrow>=23.0.1",
  "tenacity>=9.1.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "ruff>=0.14.0",
  "jupyterlab>=4.0.0",
  "ipykernel>=6.0.0",
  "matplotlib>=3.7.0",
  "seaborn>=0.13.0",
  "plotly>=5.0.0",
  "scipy>=1.10.0",
  "scikit-learn>=1.2.0",
  "statsmodels>=0.14.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["**/node_modules", ".venv", "build", "dist"]

[tool.ruff.per-file-ignores]
"tests/*" = ["D", "S101"]
